[travis] use refactor_operators_functionals branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
   - cd $HOME
   - test -d src || git clone https://github.com/dune-community/dune-gdt-super.git src
   - cd $HOME/src
+  - git checkout refactor_operators_functionals
   - git submodule update --init --recursive
   - git submodule status
   - export DCTRL_ARG="--builddir=${DUNE_BUILD_DIR}  --opts=${OPTS}"
