--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,13 @@ addons:
     - libsuitesparse-dev
     - lcov
     - curl
-    - ninja-build
     - python3-requests
 
 before_install:
   - |-
-    : ${OPTS:="config.opts/travis.ninja"} && export OPTS
+    : ${OPTS:="config.opts/travis.make"} && export OPTS
   - |-
-    : ${BUILD_CMD:="ninja -k 10000 -j 2"} && export BUILD_CMD
+    : ${BUILD_CMD:="make -k -j 2"} && export BUILD_CMD
   # workaround for https://github.com/travis-ci/travis-ci/issues/5285
   - sudo -E apt-get install -y -q python-pip python3-pip
   - sudo -E pip3 install virtualenv cpp-coveralls
