--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ before_script:
 script:
     - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD} test
     # retry this step becuase of the implicated race condition in cloning an pushing with multiple builder running in parallel
-    - travis_retry $HOME/src/scripts/bash/travis_upload_test_logs.bash ${DUNE_BUILD_DIR}/${MY_MODULE}/dune/gdt/*/test/
+    - travis_retry $HOME/src/scripts/bash/travis_upload_test_logs.bash $HOME/src/${MY_MODULE}/${DUNE_BUILD_DIR}/dune/gdt/*/test/
 
     - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD} headercheck
 
@@ -89,7 +89,7 @@ cache:
 
 env:
   global:
-    - MY_MODULE=dune-gdt DUNE_BUILD_DIR=${HOME}/dune_build/ INSTALL_DIR=$HOME/dune CTEST_OUTPUT_ON_FAILURE=1
+    - MY_MODULE=dune-gdt DUNE_BUILD_DIR=build INSTALL_DIR=$HOME/dune CTEST_OUTPUT_ON_FAILURE=1
 
 matrix:
   include:
