[travis] allow to vary debug/release builds
External libraries are always built with release flags.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
 
 before_install:
   - |-
-    : ${OPTS:="config.opts/travis.make"} && export OPTS
+    : ${OPTS:="config.opts/travis.make.release"} && export OPTS
   - |-
     : ${BUILD_CMD:="make -k -j 2"} && export BUILD_CMD
   # workaround for https://github.com/travis-ci/travis-ci/issues/5285
@@ -37,7 +37,9 @@ before_install:
   - git checkout refactor_operators_functionals
   - git submodule update --init --recursive
   - git submodule status
-  - export DCTRL_ARG="--builddir=${DUNE_BUILD_DIR} --use-cmake --opts=${OPTS}"
+  - export DBG="--opts=config.opts/travis.make.debug"
+  - export REL="--opts=config.opts/travis.make.release"
+  - export ARGS="--builddir=${DUNE_BUILD_DIR} --use-cmake"
   # our local scripts look for an OPTS env entry
   - ./local/bin/download_external_libraries.py
   - ./local/bin/build_external_libraries.py
@@ -50,26 +52,26 @@ install:
   - cd $HOME/src
   #- export INST_DCTRL=$HOME/dune/bin/dunecontrol
   - export SRC_DCTRL=$PWD/dune-common/bin/dunecontrol
-  - ${SRC_DCTRL} ${DCTRL_ARG} all
+  - ${SRC_DCTRL} ${__} all
   # move my travis checkout into this source tree
   - cp -ra ${TRAVIS_BUILD_DIR} .
 
 before_script:
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} configure
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD}
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD} test_binaries
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} configure
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} bexec ${BUILD_CMD}
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} bexec ${BUILD_CMD} test_binaries
 
 script:
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD} test
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} bexec ${BUILD_CMD} test
     # retry this step becuase of the implicated race condition in cloning an pushing with multiple builder running in parallel
     - travis_retry $HOME/src/scripts/bash/travis_upload_test_logs.bash $HOME/src/${MY_MODULE}/${DUNE_BUILD_DIR}/dune/gdt/*/test/
 
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec ${BUILD_CMD} headercheck
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} bexec ${BUILD_CMD} headercheck
 
 # runs independent of 'script' failure/success
 after_script:
     # reset for ctest
-    - ${SRC_DCTRL} ${DCTRL_ARG} --only=${MY_MODULE} bexec make clean
+    - ${SRC_DCTRL} ${__} --only=${MY_MODULE} bexec make clean
     - export CTEST_ARG="--output-on-failure -S ${TRAVIS_BUILD_DIR}/.travis.ctest"
 
 notifications:
@@ -95,7 +97,7 @@ matrix:
   include:
     - os: linux
       compiler: gcc
-      addons:
+      addons: &gcc49
         apt:
           sources:
           - *commonsources
@@ -104,10 +106,18 @@ matrix:
           - *commonpackages
           - ['g++-4.9', 'gcc-4.9']
       env: CXX=g++-4.9 CC=gcc-4.9
+    - os: linux
+      compiler: gcc
+      addons:  *gcc49
+      env: CXX=g++-4.9 __="${ARGS} ${DBG}" CC=gcc-4.9
+    - os: linux
+      compiler: gcc
+      addons:  *gcc49
+      env: CXX=g++-4.9 __="${ARGS} ${REL}" CC=gcc-4.9
 
     - os: linux
       compiler: gcc
-      addons:
+      addons: &gcc5
         apt:
           sources:
           - *commonsources
@@ -115,11 +125,18 @@ matrix:
           packages:
           - *commonpackages
           - ['g++-5', 'gcc-5']
-      env: CXX=g++-5 CC=gcc-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CXX=g++-5 __="${ARGS} ${DBG}" CC=gcc-5
+    - os: linux
+      compiler: gcc
+      addons:  *gcc5
+      env: CXX=g++-5 __="${ARGS} ${REL}" CC=gcc-5
 
     - os: linux
       compiler: clang
-      addons:
+      addons: &clang37
         apt:
           sources:
           - *commonsources
@@ -127,5 +144,12 @@ matrix:
           packages:
           - *commonpackages
           - ['clang-3.7']
-      env: CXX=clang++-3.7 CC=clang-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CXX=clang++-3.7 __="${ARGS} ${DBG}" CC=clang-3.7
+    - os: linux
+      compiler: clang
+      addons:  *clang37
+      env: CXX=clang++-3.7 __="${ARGS} ${REL}" CC=clang-3.7
 
