--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -19,6 +19,9 @@ foreach (test ${testnames})
   if (${test} MATCHES operators)
     list(APPEND operators_test_binaries ${test})
   endif (${test})
+  if (${test} MATCHES projections)
+    list(APPEND projections_test_binaries ${test})
+  endif (${test})
   if (${test} MATCHES linearelliptic AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_alugrid_test_binaries ${test})
   endif (${test})
@@ -29,6 +32,7 @@ endforeach (test ${testnames})
 
 add_custom_target(test_binaries_space DEPENDS ${spaces_test_binaries})
 add_custom_target(test_binaries_operator DEPENDS ${operators_test_binaries})
+add_custom_target(test_binaries_projection DEPENDS ${projections_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_alugrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_sgrid_test_binaries})
 
