[test] rename to better distinguish

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -22,6 +22,9 @@ foreach (test ${testnames})
   if (${test} MATCHES projections)
     list(APPEND projections_test_binaries ${test})
   endif (${test})
+  if (${test} MATCHES prolongations)
+    list(APPEND prolongations_test_binaries ${test})
+  endif (${test})
   if (${test} MATCHES linearelliptic AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_alugrid_test_binaries ${test})
   endif (${test})
@@ -33,6 +36,7 @@ endforeach (test ${testnames})
 add_custom_target(test_binaries_space DEPENDS ${spaces_test_binaries})
 add_custom_target(test_binaries_operator DEPENDS ${operators_test_binaries})
 add_custom_target(test_binaries_projection DEPENDS ${projections_test_binaries})
+add_custom_target(test_binaries_prolongation DEPENDS ${prolongations_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_alugrid_test_binaries})
 add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_sgrid_test_binaries})
 
@@ -47,13 +51,13 @@ endif (NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
 add_subdirectory(linearelliptic)
 add_subdirectory(hyperbolic)
 
-target_link_libraries(test_linearelliptic_cg_discretization_alugrid_fem_eigen    lib_test_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic_cg_discretization_sgrid_fem_eigen      lib_test_linearelliptic_cg_discretizations_sgrid)
-target_link_libraries(test_linearelliptic_cg_discretization_alugrid_fem_istl     lib_test_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic_cg_discretization_sgrid_fem_istl       lib_test_linearelliptic_cg_discretizations_sgrid)
-target_link_libraries(test_linearelliptic_cg_discretization_alugrid_pdelab_eigen lib_test_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic_cg_discretization_sgrid_pdelab_eigen   lib_test_linearelliptic_cg_discretizations_sgrid)
-target_link_libraries(test_linearelliptic_cg_discretization_alugrid_pdelab_istl  lib_test_linearelliptic_cg_discretizations_alugrid)
-target_link_libraries(test_linearelliptic_cg_discretization_sgrid_pdelab_istl    lib_test_linearelliptic_cg_discretizations_sgrid)
-target_link_libraries(test_hyperbolic_fv_discretization_yaspgrid                 lib_test_hyperbolic_fv_discretizations_yaspgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__alugrid_fem_eigen    lib_test_linearelliptic_cg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__cg_discretization__sgrid_fem_eigen      lib_test_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__alugrid_fem_istl     lib_test_linearelliptic_cg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__cg_discretization__sgrid_fem_istl       lib_test_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_eigen lib_test_linearelliptic_cg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_eigen   lib_test_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_linearelliptic__cg_discretization__alugrid_pdelab_istl  lib_test_linearelliptic_cg_discretizations_alugrid)
+target_link_libraries(test_linearelliptic__cg_discretization__sgrid_pdelab_istl    lib_test_linearelliptic_cg_discretizations_sgrid)
+target_link_libraries(test_hyperbolic_fv_discretization_yaspgrid                   lib_test_hyperbolic_fv_discretizations_yaspgrid)
 
