--- a/.travis.yml
+++ b/.travis.yml
@@ -118,100 +118,100 @@ matrix:
       compiler: gcc
       addons:  *gcc49
       env: BLD=${DBG} CC=gcc-4.9 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-4.9
-    - os: linux
-      compiler: gcc
-      addons:  *gcc49
-      env: BLD=${REL} CC=gcc-4.9 TESTS=operator CXX=g++-4.9
-    - os: linux
-      compiler: gcc
-      addons:  *gcc49
-      env: BLD=${REL} CC=gcc-4.9 TESTS=space CXX=g++-4.9
-    - os: linux
-      compiler: gcc
-      addons:  *gcc49
-      env: BLD=${REL} CC=gcc-4.9 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-4.9
-    - os: linux
-      compiler: gcc
-      addons:  *gcc49
-      env: BLD=${REL} CC=gcc-4.9 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-4.9
-
-    - os: linux
-      compiler: gcc
-      addons: &gcc5
-        apt:
-          sources:
-          - *commonsources
-          - 'ubuntu-toolchain-r-test'
-          packages:
-          - *commonpackages
-          - ['g++-5', 'gcc-5']
-      env: BLD=${DBG} CC=gcc-5 TESTS=operator CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${DBG} CC=gcc-5 TESTS=space CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${DBG} CC=gcc-5 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${DBG} CC=gcc-5 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${REL} CC=gcc-5 TESTS=operator CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${REL} CC=gcc-5 TESTS=space CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${REL} CC=gcc-5 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-5
-    - os: linux
-      compiler: gcc
-      addons:  *gcc5
-      env: BLD=${REL} CC=gcc-5 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-5
-
-    - os: linux
-      compiler: clang
-      addons: &clang37
-        apt:
-          sources:
-          - *commonsources
-          - ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
-          packages:
-          - *commonpackages
-          - ['clang-3.7']
-      env: BLD=${DBG} CC=clang-3.7 TESTS=operator CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${DBG} CC=clang-3.7 TESTS=space CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${DBG} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_alugrid CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${DBG} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_sgrid CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${REL} CC=clang-3.7 TESTS=operator CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${REL} CC=clang-3.7 TESTS=space CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${REL} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_alugrid CXX=clang++-3.7
-    - os: linux
-      compiler: clang
-      addons:  *clang37
-      env: BLD=${REL} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_sgrid CXX=clang++-3.7
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc49
+#      env: BLD=${REL} CC=gcc-4.9 TESTS=operator CXX=g++-4.9
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc49
+#      env: BLD=${REL} CC=gcc-4.9 TESTS=space CXX=g++-4.9
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc49
+#      env: BLD=${REL} CC=gcc-4.9 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-4.9
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc49
+#      env: BLD=${REL} CC=gcc-4.9 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-4.9
+#
+#    - os: linux
+#      compiler: gcc
+#      addons: &gcc5
+#        apt:
+#          sources:
+#          - *commonsources
+#          - 'ubuntu-toolchain-r-test'
+#          packages:
+#          - *commonpackages
+#          - ['g++-5', 'gcc-5']
+#      env: BLD=${DBG} CC=gcc-5 TESTS=operator CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${DBG} CC=gcc-5 TESTS=space CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${DBG} CC=gcc-5 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${DBG} CC=gcc-5 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${REL} CC=gcc-5 TESTS=operator CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${REL} CC=gcc-5 TESTS=space CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${REL} CC=gcc-5 TESTS=linearelliptic_cg_discretization_alugrid CXX=g++-5
+#    - os: linux
+#      compiler: gcc
+#      addons:  *gcc5
+#      env: BLD=${REL} CC=gcc-5 TESTS=linearelliptic_cg_discretization_sgrid CXX=g++-5
+#
+#    - os: linux
+#      compiler: clang
+#      addons: &clang37
+#        apt:
+#          sources:
+#          - *commonsources
+#          - ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.7']
+#          packages:
+#          - *commonpackages
+#          - ['clang-3.7']
+#      env: BLD=${DBG} CC=clang-3.7 TESTS=operator CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${DBG} CC=clang-3.7 TESTS=space CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${DBG} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_alugrid CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${DBG} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_sgrid CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${REL} CC=clang-3.7 TESTS=operator CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${REL} CC=clang-3.7 TESTS=space CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${REL} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_alugrid CXX=clang++-3.7
+#    - os: linux
+#      compiler: clang
+#      addons:  *clang37
+#      env: BLD=${REL} CC=clang-3.7 TESTS=linearelliptic_cg_discretization_sgrid CXX=clang++-3.7
 
