[cmake] update some test targets

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -15,24 +15,20 @@ foreach (test ${testnames})
   set_tests_properties(${test} PROPERTIES TIMEOUT 360)
   if (${test} MATCHES spaces)
     list(APPEND spaces_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES operators)
+  elseif (${test} MATCHES operators)
     list(APPEND operators_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES projections)
+  elseif (${test} MATCHES projections)
     list(APPEND projections_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES prolongations)
+  elseif (${test} MATCHES prolongations)
     list(APPEND prolongations_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES linearelliptic AND ${test} MATCHES alugrid)
-    list(APPEND linearelliptic_alugrid_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES linearelliptic AND ${test} MATCHES sgrid)
-    list(APPEND linearelliptic_sgrid_test_binaries ${test})
-  endif (${test})
-  if (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
+  elseif (${test} MATCHES linearelliptic_cg AND ${test} MATCHES alugrid)
+    list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
+  elseif (${test} MATCHES linearelliptic_cg AND ${test} MATCHES sgrid)
+    list(APPEND linearelliptic_cg_sgrid_test_binaries ${test})
+  elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
     list(APPEND hyperbolic_yaspgrid_test_binaries ${test})
+  else (${test})
+    list(APPEND other_binaries ${test})
   endif (${test})
 endforeach (test ${testnames})
 
@@ -40,9 +36,10 @@ add_custom_target(test_binaries_space DEPENDS ${spaces_test_binaries})
 add_custom_target(test_binaries_operator DEPENDS ${operators_test_binaries})
 add_custom_target(test_binaries_projection DEPENDS ${projections_test_binaries})
 add_custom_target(test_binaries_prolongation DEPENDS ${prolongations_test_binaries})
-add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_alugrid_test_binaries})
-add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_sgrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_cg_discretization_alugrid DEPENDS ${linearelliptic_cg_alugrid_test_binaries})
+add_custom_target(test_binaries_linearelliptic_cg_discretization_sgrid DEPENDS ${linearelliptic_cg_sgrid_test_binaries})
 add_custom_target(test_binaries_hyperbolic_fv_discretization_yaspgrid DEPENDS ${hyperbolic_yaspgrid_test_binaries})
+add_custom_target(test_binaries_other DEPENDS ${other_binaries})
 
 # link spe10 data file if present
 if (NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
