[cmake] fix some test binaries

--- a/dune/gdt/test/CMakeLists.txt
+++ b/dune/gdt/test/CMakeLists.txt
@@ -21,9 +21,9 @@ foreach (test ${testnames})
     list(APPEND projections_test_binaries ${test})
   elseif (${test} MATCHES prolongations)
     list(APPEND prolongations_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic_cg AND ${test} MATCHES alugrid)
+  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES alugrid)
     list(APPEND linearelliptic_cg_alugrid_test_binaries ${test})
-  elseif (${test} MATCHES linearelliptic_cg AND ${test} MATCHES sgrid)
+  elseif (${test} MATCHES linearelliptic__cg AND ${test} MATCHES sgrid)
     list(APPEND linearelliptic_cg_sgrid_test_binaries ${test})
   elseif (${test} MATCHES hyperbolic AND ${test} MATCHES yaspgrid)
     list(APPEND hyperbolic_yaspgrid_test_binaries ${test})
